# Youtube-Channel-Transcription-Downloader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_OPTIONS.md  CONFIGURATION.md  CONTRIBUTING.md  EXAMPLES.md  GIT_WORKFLOW.md  IDEAS.md  PLAN.md  PROJECT_SUMMARY.md  README.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md  USAGE_OPTIONS_YT_DLP.md  Youtube.Transcribe.py  Youtube_Transcribe.py  config.toml  config.toml.example  main.py  pyproject.toml  requirements.txt  test_integration.py  test_phase2.py  test_phase3.py  test_phase4.py  test_playlist_detection.py
specs/: archive_implementation_plan.md
youtube_transcript_gui/: main.py
