[project]
name = "youtube-channel-transcription-downloader"
version = "0.1.0"
description = "A Python tool to download transcripts from YouTube channels or individual videos in multiple languages with configurable rate limiting and error handling."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Chris Engelhard", email = "chris@chrisengelhard.nl" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/digi4care/Youtube-Channel-Transcription-Downloader"
"Bug Tracker" = "https://github.com/digi4care/Youtube-Channel-Transcription-Downloader/issues"

dependencies = []
