[project]
name = "youtube-channel-transcription-downloader"
version = "0.1.0"
description = "A Python tool to download transcripts from YouTube channels or individual videos in multiple languages with configurable rate limiting and error handling."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Chris Engelhard", email = "chris@chrisengelhard.nl" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "colorama>=0.4.6",
    "defusedxml>=0.7.1",
    "idna>=3.11",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "toml>=0.10.2",
    "urllib3>=2.5.0",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.11.12",
]

[project.urls]
"Homepage" = "https://github.com/digi4care/Youtube-Channel-Transcription-Downloader"
"Bug Tracker" = "https://github.com/digi4care/Youtube-Channel-Transcription-Downloader/issues"
